--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.1",
     "axios": "^1.1.3",
-    "bootstrap": "^4.6.0",
     "datatables": "^1.10.18",
     "datatables.net-bs4": "^1.13.1",
     "datatables.net-buttons": "^2.3.3",
@@ -28,8 +27,9 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
     "react-spinners": "^0.13.8",
