--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
@@ -62,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
